--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "v8.12.0",
+    "npm": "6.4.1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -16,7 +20,6 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "formidable": "^1.2.1",
-    "ngrok": "^3.1.1",
     "nodemon": "^1.18.10",
     "nonce": "^1.0.4",
     "querystring": "^0.2.0",
