--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
     "cookie": "^0.3.1",
     "crypto": "^1.0.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "formidable": "^1.2.1",
+    "helmet": "^3.15.1",
     "nonce": "^1.0.4",
     "querystring": "^0.2.0",
     "request": "^2.88.0",
